--- a/Assets/CV.css
+++ b/Assets/CV.css
@@ -239,7 +239,8 @@ display: block;
 @media (max-width: 1000px) {
 .container {
   margin: 10px;
-    grid-template-columns: repeat(1,4fr);
+    grid-template-columns: repeat(1,1fr);
+Zoom: 150%;
     
     
 }
