--- a/Assets/CV.css
+++ b/Assets/CV.css
@@ -231,6 +231,25 @@ display: block;
     background: #545454;
 }
 
+.detes {
+   display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 380px;
+    list-style: none;
+}
+#sizer {
+    font-size: 17px;
+}
+
+.weigher {
+    
+    font-weight: 500;
+}
+#bottomsup {
+    padding-bottom: 8px;
+}
+
 #ref {
     border-bottom: 2px solid black;
     width: 550px;
@@ -240,7 +259,6 @@ display: block;
 .container {
   margin: 10px;
     grid-template-columns: repeat(1,1fr);
-Zoom: 150%;
     
     
 }
@@ -253,6 +271,10 @@ Zoom: 150%;
             flex-direction: column;
             margin-bottom: 5px;
             
+        }
+        
+        .detes {
+            flex-direction: column;
         }
         
         
